<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="match_parent">
  <HorizontalScrollView android:layout_width="wrap_content" android:layout_height="match_parent">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="match_parent">
      <Button android:textSize="12.0sp" android:textColor="#ff000000" android:id="@id/panel_btn_select_all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/selectAll" style="?android:attr/borderlessButtonStyle">
      </Button>
      <Button android:textSize="12.0sp" android:textColor="#ff000000" android:id="@id/panel_btn_copy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/copy" style="?android:attr/borderlessButtonStyle">
      </Button>
      <Button android:textSize="12.0sp" android:textColor="#ff000000" android:id="@id/panel_btn_paste" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paste" style="?android:attr/borderlessButtonStyle">
      </Button>
      <Button android:textSize="12.0sp" android:textColor="#ff000000" android:id="@id/panel_btn_cut" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cut" style="?android:attr/borderlessButtonStyle">
      </Button>
    </LinearLayout>
  </HorizontalScrollView>
</LinearLayout>