<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/text_compose_panel" android:background="@android:color/white" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content">
  <com.google.android.material.button.MaterialButton android:textSize="10.0sp" android:textColor="@color/textActionNameColor" android:id="@+id/tcpw_material_button_select_all" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/selectAll" app:icon="@drawable/round_select_all_20" app:iconGravity="0x20" app:iconPadding="8.0dp" app:iconTint="@color/textActionNameColor" app:shapeAppearanceOverlay="@style/ButtonBar.IconOnly.Left" style="@style/TextButton.IconOnly">
  </com.google.android.material.button.MaterialButton>
  <com.google.android.material.button.MaterialButton android:textSize="10.0sp" android:textColor="@color/textActionNameColor" android:id="@+id/tcpw_material_button_copy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/copy" app:icon="@drawable/round_content_copy_20" app:iconGravity="0x20" app:iconPadding="8.0dp" app:iconTint="@color/textActionNameColor" app:shapeAppearanceOverlay="@style/ButtonBar.IconOnly.Middle" style="@style/TextButton.IconOnly">
  </com.google.android.material.button.MaterialButton>
  <com.google.android.material.button.MaterialButton android:textSize="10.0sp" android:textColor="@color/textActionNameColor" android:id="@+id/tcpw_material_button_paste" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/paste" app:icon="@drawable/round_content_paste_20" app:iconGravity="0x20" app:iconPadding="8.0dp" app:iconTint="@color/textActionNameColor" app:shapeAppearanceOverlay="@style/ButtonBar.IconOnly.Middle" style="@style/TextButton.IconOnly">
  </com.google.android.material.button.MaterialButton>
  <com.google.android.material.button.MaterialButton android:textSize="10.0sp" android:textColor="@color/textActionNameColor" android:id="@+id/tcpw_material_button_cut" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cut" app:icon="@drawable/round_content_cut_20" app:iconGravity="0x20" app:iconPadding="8.0dp" app:iconTint="@color/textActionNameColor" app:shapeAppearanceOverlay="@style/ButtonBar.IconOnly.Middle" style="@style/TextButton.IconOnly">
  </com.google.android.material.button.MaterialButton>
  <View android:layout_gravity="center" android:layout_height="36.0dp" style="@style/VerticalDivider">
  </View>
  <com.google.android.material.button.MaterialButton android:textSize="10.0sp" android:textColor="@color/textActionNameColor" android:id="@+id/tcpw_material_button_save_to_project" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/more" app:icon="@drawable/ic_more_vert_black_20dp" app:iconGravity="0x20" app:iconPadding="8.0dp" app:iconTint="@color/textActionNameColor" app:shapeAppearanceOverlay="@style/ButtonBar.IconOnly.Right" style="@style/TextButton.IconOnly">
  </com.google.android.material.button.MaterialButton>
</LinearLayout>